feature: extend template

--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,9 @@
 /public/
 /.idea/
 /tests/
+/.storybook/
+/.vscode/
+/plopTemplates/
 .editorconfig
 .eslintrc.js
 .gitignore
@@ -15,3 +18,8 @@ vite.config.js
 webpack.config.js
 tailwind.config.js
 postcss.config.js
+plopfile.js
+auto-imports.d.ts
+components.d.ts
+/.github/
+.eslintrc-auto-import.json
