--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,16 +8,16 @@
     "sourceMap": false,
     "lib": ["esnext", "dom"],
     "types": [
+      "vitest",
       "vite/client",
-      "cypress",
-      "@types/node",
-      "@vueuse/core",
-      "@types/marked"
+      "@types/node"
     ],
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "importHelpers": true,
+    "skipLibCheck": true,
+    "incremental": true,
     "noEmit": true,
     "plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
     "paths": {
@@ -26,5 +26,6 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue"],
-  "exclude": ["node_modules", "dist", "public", "tests"]
+  "exclude": ["node_modules", "dist", "public", "tests"],
+  "files": ["auto-imports.d.ts", "components.d.ts"]
 }
