--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "author": "AUTHOR",
   "license": "MIT",
   "version": "1.0.0",
+  "type": "module",
+  "main": "dist/index.js",
   "engines": {
     "node": "16.x"
   },
@@ -18,37 +20,70 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite build && vite preview",
-    "start": "yarn dev & wait-on tcp:3000 -v",
+    "unit": "vitest run",
+    "unitWatcher": "vitest run",
+    "unitui": "vitest --ui",
+    "typecheck": "vue-tsc --noEmit",
+    "plop": "plop",
     "generateCss": "postcss ./src/assets/index.css -o ./src/assets/output.css",
-    "prePublish": "npm run generateCss && npm run build"
+    "prePublish": "npm run generateCss && npm run build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@vueuse/core": "^8.3.1",
-    "marked": "^4.0.14",
+    "@tailwindcss/container-queries": "^0.1.0",
+    "container-query-polyfill": "^1.0.2",
     "mitt": "^3.0.0",
-    "vue": "^3.2.33"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/eslint-config-standard": "^6.1.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "autoprefixer": "^10.4.5",
-    "cssnano": "^5.1.9",
-    "eslint": "^8.14.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-essentials": "^7.0.0-beta.27",
+    "@storybook/addon-interactions": "^7.0.0-beta.27",
+    "@storybook/addon-links": "^7.0.0-beta.27",
+    "@storybook/blocks": "^7.0.0-beta.27",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/vue3": "^7.0.0-beta.27",
+    "@storybook/vue3-vite": "^7.0.0-beta.27",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/ui": "^0.27.1",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.2.7",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
+    "cssnano": "^5.1.14",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^8.7.1",
-    "postcss": "^8.4.12",
-    "postcss-cli": "^9.1.0",
-    "postcss-import": "^14.1.0",
-    "postcss-nested": "^5.0.6",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.6",
-    "wait-on": "^6.0.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-vue": "^9.8.0",
+    "jsdom": "^21.0.0",
+    "msw": "^0.49.2",
+    "plop": "^3.1.1",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.0.0-beta.27",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^4.1.0-beta.0",
+    "vitest": "^0.27.1",
+    "vue-loader": "^16.8.3",
+    "vue-tsc": "^1.0.24",
+    "wait-on": "^7.0.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
